--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1,9 +1,4 @@
-/*!
- * Bootstrap v5.0.0-beta1 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
+
 /* line 1, src/assets/scss/_root.scss */
 :root {
   --bs-blue: #0d6efd;
@@ -19,7 +14,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #4232c2;
+  --bs-primary: rgb(32, 173, 233);
   --bs-secondary: #6266ea;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -9595,7 +9590,7 @@ fieldset:disabled .btn {
 
 /* line 50, src/assets/scss/mixins/_utilities.scss */
 .bg-secondary {
-  background-color: #6266ea !important;
+  background-color: rgb(23, 86, 110) !important;
 }
 
 /* line 50, src/assets/scss/mixins/_utilities.scss */
